--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "framer-motion": "^11.2.10",
     "nodemon": "^3.1.3"
   }
 }
